arreglar tildes y telefono

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>SERVICIO DE INSTALACION<br/> DE CALEFON
+							<h1>SERVICIO DE INSTALACION<br/> DE CÁLEFON
 							</h1>
 							<h2>Jaime Diocares</h2>
 							<ul>
 								<li>Gasfiter Certificado SEC</li>                          
-								<li>Instalación de Calefon</li>
+								<li>Instalación de Cálefon</li>
 								<li>Tiro Natural y Tiro Forzado</li>
 							</ul>
 							<p>Más de 20 años de experiencia con todas las marcas de calefones</p>								
@@ -44,7 +44,7 @@
 									</li>
 									<li>
 										<h3>Teléfono/Whatsapp</h3>
-										<a href="tel:+5698477786">+569 8477-786</a>
+										<a href="tel:+56984777860">+56984777860</a>
 									</li>
 								</ul>
 						</header>
